Modifiche per getListOfPharmacies da servizio esterno a interno
