# Implementation/external-services/controllers/DigitalPharma.js
@@ -1,0 +1,14 @@
+'use strict';
+
+var utils = require('../utils/writer.js');
+var digitalPharma = require('../services/DigitalPharmaService');
+
+module.exports.getListOfPharmacies = function getListOfPharmacies(req, res) {
+    digitalPharma.getListOfPharmacies()
+        .then(function (response) {
+            utils.writeJson(res, response);
+        })
+        .catch(function (response) {
+            utils.writeJson(res, response);
+        });
+};
